--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header nav ul li a {
     font-size: 22px;
 }
 .hero {
-    background-image: url(./Big\ bend\ desert.jpg);
+    background-image: url(./bigbenddesert.jpg);
     height: 625px;
     background-size: cover;
     background-position: center;
